Fix for bug #8449(Silent column changes)

mysql-test/r/show_check.result:
  test result fixed
mysql-test/r/sql_mode.result:
  test result fixed
mysql-test/r/type_decimal.result:
  test result fixed
mysql-test/r/type_float.result:
  test result fixed
mysql-test/r/type_newdecimal.result:
  test result fixed
mysql-test/t/type_decimal.test:
  test fixed
mysql-test/t/type_float.test:
  test fixed
mysql-test/t/type_newdecimal.test:
  test case added
sql/share/errmsg.txt:
  error messages added
sql/sql_parse.cc:
  now precision/scale parameters are handled in required way